fixed seo and accessibilty

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <meta name="description" content="Govind Bohara - Software Developer Portfolio" />
+  <meta name="keywords" content="Govind Bohara, Software Developer, Portfolio, React, JavaScript, Web Development" />
+  <meta name="author" content="Govind Bohara" />
   <link rel="stylesheet" href="./src/index.css" />
   <title>Govind Bohara - Software Developer</title>
 </head>
